<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/setting"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/setting_act_viewline_common" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_menu_item_height"
                android:background="?attr/selectableItemBackground"
                android:clickable="true">

                <TextView
                    style="@style/SettingMenuTvStyle"
                    android:text="@string/message" />

                <Switch
                    android:id="@+id/push_toggle"
                    style="@style/SettingMenuRightStyle" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="15dp"
                android:background="@color/setting_act_viewline_common" />

            <RelativeLayout
                android:id="@+id/cacheLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_menu_item_height"
                android:background="?attr/selectableItemBackground"
                android:clickable="true">

                <TextView
                    style="@style/SettingMenuTvStyle"
                    android:text="@string/clear_cache" />

                <TextView
                    android:id="@+id/cacheSize"
                    style="@style/SettingMenuRightStyle"
                    android:text="0.0M" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/setting_act_viewline_common" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/setting_act_viewline_common" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_menu_item_height"
                android:background="?attr/selectableItemBackground"
                android:clickable="true">

                <TextView
                    style="@style/SettingMenuTvStyle"
                    android:text="@string/font_size" />

                <TextView
                    style="@style/SettingMenuRightStyle"
                    android:text="中" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="15dp"
                android:background="@color/setting_act_viewline_common" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_menu_item_height"
                android:background="?attr/selectableItemBackground"
                android:clickable="true">

                <TextView
                    style="@style/SettingMenuTvStyle"
                    android:text="@string/night_mode" />

                <Switch
                    style="@style/SettingMenuRightStyle" />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="15dp"
                android:background="@color/setting_act_viewline_common" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_menu_item_height"
                android:background="?attr/selectableItemBackground"
                android:clickable="true">

                <TextView
                    style="@style/SettingMenuTvStyle"
                    android:text="@string/net_cache" />

                <Switch
                    style="@style/SettingMenuRightStyle" />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/setting_act_viewline_common" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/setting_act_viewline_common" />
            <RelativeLayout
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_menu_item_height"
                android:background="?attr/selectableItemBackground"
                android:clickable="true">

                <TextView
                    style="@style/SettingMenuTvStyle"
                    android:text="@string/about" />

                <ImageView
                    style="@style/SettingMenuRightStyle"
                    android:src="@drawable/arrow_right_grey"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="15dp"
                android:background="@color/setting_act_viewline_common" />
            <RelativeLayout
                android:id="@+id/feedback"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_menu_item_height"
                android:background="?attr/selectableItemBackground"
                android:clickable="true">

                <TextView
                    style="@style/SettingMenuTvStyle"
                    android:text="@string/backset" />

                <ImageView
                    style="@style/SettingMenuRightStyle"
                    android:src="@drawable/arrow_right_grey"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/setting_act_viewline_common" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/setting_act_viewline_common" />
            <RelativeLayout
                android:id="@+id/checkUpgrade"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_menu_item_height"
                android:background="?attr/selectableItemBackground"
                android:clickable="true">

                <TextView
                    style="@style/SettingMenuTvStyle"
                    android:text="@string/refresh" />

                <TextView
                    android:id="@+id/version_tv"
                    style="@style/SettingMenuRightStyle"
                    android:text="3.3.3"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/setting_act_viewline_common" />
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</LinearLayout>